GameLogic with hashsets and linkedlist for queue system and POM JavaFX