@@ -115,14 +115,23 @@
                     </execution>
                 </executions>
             </plugin>
+            
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>app.App</mainClass>
+                    <launcher>launcher</launcher>
+                    <options>
+                        <option>--module-path</option>
+                        <option>${javafx.platform.path}</option>
+                        <option>--add-modules</option>
+                        <option>javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media</option>
+                    </options>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
